some adjustments, m11
